# git-mentor

./: Cargo.toml  LICENSE  README.md  codecov.yaml  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci-deploy.yml  react-unit-test.yml  rust-unit-test.yml  start-ci.yml  stop-ci.yml
app-spec/: .env  README.md  appspec.ci.yml  appspec.yml  gmt-api.service  gmt-server.service  start.sh  validate.sh
app-spec/ci/: .env  start.sh  stop.sh  validate.sh
database/: .env  Cargo.toml  README.md  docker-compose.yml
database/migrations/00001-setup-users/: down.sql  up.sql
database/migrations/00002-setup-repositories/: down.sql  up.sql
database/migrations/00003-setup-comments/: down.sql  up.sql
database/migrations/2023-12-19-145058_create_users/: up.sql
database/migrations/2023-12-19-150802_create_RepoType/: down.sql  up.sql
database/migrations/2023-12-19-150810_create_groups/: up.sql
database/migrations/2023-12-19-150820_create_repositories/: down.sql  up.sql
database/migrations/2023-12-19-152143_create_CommentType/: down.sql  up.sql
database/migrations/2023-12-19-152248_create_CommentAuthor/: down.sql  up.sql
database/migrations/2023-12-19-152358_create_comments/: up.sql
database/migrations/2023-12-19-152708_group_students/: down.sql  up.sql
database/migrations/2023-12-20-134741_create_Status/: down.sql  up.sql
database/migrations/2023-12-20-135030_create_CiRun/: down.sql  up.sql
database/src/: connection_pool.rs  error.rs  lib.rs  models.rs  schema.rs  show_users.rs
database/src/db_handle/: assignment.rs  cirun.rs  comment.rs  group.rs  mod.rs  repository.rs  tests.rs  user.rs
database/tests/: lib_tests.rs
docs/: Frontend Design.md  Git mentor.md  Infrastructure.md
docs/graphs/: ci.d2  git_process.d2  infrastructure.d2  ssh_process.d2  test_worker.d2
git-server/: Cargo.toml  README.md
git-server-example/: Cargo.toml  README.md
git-server-example/src/: main.rs  simple_auth.rs  simple_repository.rs  simple_repository_provider.rs  simple_user.rs
git-server/src/: authenticator.rs  error.rs  git_handler_config.rs  git_process.rs  git_server.rs  git_server_config.rs  lib.rs  test_utils.rs
git-server/src/git_handler/: git_handler_struct.rs  mod.rs  utils.rs
git-server/src/repository/: mod.rs  repository_provider.rs  repository_trait.rs
git-server/src/server/: git_process.rs  mod.rs  request_handler.rs
gmt-api/: .env  Cargo.toml  README.md  build.rs  docker-compose.yml
gmt-api/src/: error.rs  handlers.rs  json.rs  main.rs  routes.rs  swagger.rs
gmt-api/src/handlers/: mod.rs
gmt-api/src/handlers/auth/: login.rs  mod.rs
gmt-api/src/security/: gmt_token.rs  mod.rs
gmt-api/src/services/: hello_service.rs  mod.rs  structs.rs  test_utils.rs
gmt-api/src/services/auth_service/: mod.rs  structs.rs  user_token.rs
gmt-cdk/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
gmt-cdk/lib/: ci-stacks.ts  dev-stack.ts  full-stack.ts
gmt-cdk/lib/constructs/: application-instance.ts  website-bucket.ts
gmt-cdk/lib/init-commands/: cloudwatch-agent.ts  codedeploy-agent.ts  postgres.ts
gmt-common/: Cargo.toml  README.md  build.rs
gmt-common/src/: gmt_user.rs  lib.rs  password.rs  proto_utils.rs
gmt-common/src/repositories/: db_repository.rs  db_repository_provider.rs  mod.rs
gmt-protobuf/: README.md  messages.proto
gmt-server/: .env  Cargo.toml  README.md
gmt-server/src/: authentication.rs  main.rs  ssh_user.rs
gmt-server/src/repositories/: db_repository.rs  db_repository_provider.rs
gmt-web-app/: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
gmt-web-app/prod/: config.json
gmt-web-app/public/: git-mentor.html  index.html  manifest.json
gmt-web-app/src/: App.tsx  index.tsx
gmt-web-app/src/api/: auth.ts
gmt-web-app/src/components/: Authentication.tsx  Box.tsx
gmt-web-app/src/components/atoms/: git-mentor.tsx
gmt-web-app/src/components/molecules/: Footer.tsx  Navbar.tsx
gmt-web-app/src/components/organisms/: PageLayout.tsx
gmt-web-app/src/context/: api.tsx  authentication.tsx  globalConfig.tsx  index.tsx  services.ts  types.ts
gmt-web-app/src/features/auth/: Authentication.tsx  Login.tsx  Signout.tsx  Signup.tsx
gmt-web-app/src/features/auth/components/: AuthenticationForm.tsx  LoginForm.tsx  SignupForm.tsx
gmt-web-app/src/features/auth/helpers/: services.ts  types.ts
gmt-web-app/src/features/auth/hooks/: useAuthentication.tsx
gmt-web-app/src/features/data-viz/components/: ColumnContent.tsx  ColumnHeader.tsx
gmt-web-app/src/features/data-viz/pages/: GroupAssignements.tsx  GroupStudents.tsx  GroupsList.tsx  RepositoriesList.tsx  StudentsList.tsx
gmt-web-app/src/features/data-viz/services/: groupsAPI.ts  repositoriesAPI.ts  studentsAPI.ts
gmt-web-app/src/features/user/pages/: UserOverview.tsx
gmt-web-app/src/helpers/: types.ts
gmt-web-app/src/routes/: AuthenticatedRoutes.tsx  GroupsRouter.tsx  RepositoriesRouter.tsx  StudentsRouter.tsx  UnauthenticatedRoutes.tsx  UserRoutes.tsx  index.ts
gmt-web-app/src/routing/: GroupsRouter.tsx  RepositoriesRouter.tsx  Router.tsx  StudentsRouter.tsx
gmt-web-app/src/styles/: index.css
gmt-web-app/src/tests/: App.test.tsx  Authentication.test.tsx
mentor-app/: package-lock.json  package.json
mentor-app/.github/workflows/: unit-test.yml
mentor-app/public/: manifest.json
mentor-app/src/: App.tsx
mentor-app/src/tests/: App.test.tsx  Authentication.test.tsx
ssh-server/: Cargo.toml
ssh-server/src/: authenticator.rs  error.rs  lib.rs  ssh_server.rs  test_utils.rs  user.rs  wrapper.rs
ssh-server/src/handler/: handler_result.rs  handler_trait.rs  mod.rs
ssh-server/src/server/: request_handler.rs
