[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["dep:mockall", "dep:faux"]

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
chrono = "0.4.31"
diesel_migrations = "2.1.0"
thiserror = "1.0.57"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
mockall = { version = "0.12", optional = true }
faux = { version = "^0.1", optional = true }

[dev-dependencies]
dotenv = "0.15.0"
rstest = "0.18.2"
