[package]
name = "database"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["dep:faux"]

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
chrono = "0.4.31"
diesel_migrations = "2.1.0"
thiserror = "1.0.57"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
faux = { version = "^0.1", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
rstest = "0.19"
