[package]
name = "git-server-example"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-server = { path = "../git-server" }
log = "0.4.20"
russh-keys = "0.38.x"
simple_logger = "4.2.0"
tempfile = "3.8.1"
tokio = "1.33.0"
