[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
log = "0.4.20"
russh = "0.39.x"
russh-keys = "0.38.x"
shell-words = "1.1.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["time"] }
ssh-server = { path = "../ssh-server" }
