[package]
name = "gmt-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["poem-openapi/swagger-ui"]

[dependencies]
poem = "1"
poem-openapi = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[build-dependencies]
poem = "1"
poem-openapi = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = [ "fmt", "ansi", "chrono" ]