[package]
name = "gmt-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["poem-openapi/swagger-ui"]

[dependencies]
database = { path = "../database" }
gmt-common = { path = "../gmt-common" }
tracing = "0.1"
simple_logger = "4.3.3"
poem = "1"
poem-openapi = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.57"
jwt = "0.16.0"
hmac = "0.12.1"
log = "0.4.21"
sha2 = "0.10.8"
dotenv = "0.15.0"

[dev-dependencies]
database = { path = "../database", features = ["mock"] }
gmt-common = { path = "../gmt-common", features = ["mock"] }
poem = { version = "1", features = ["test"] }
rstest = "0.18.2"
faux = "^0.1"

[build-dependencies]
database = { path = "../database", features = ["mock"] }
gmt-common = { path = "../gmt-common", features = ["mock"] }
poem = "1"
poem-openapi = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.57"
jwt = "0.16.0"
hmac = "0.12.1"
log = "0.4.21"
sha2 = "0.10.8"
dotenv = "0.15.0"

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = [ "fmt", "ansi", "chrono" ]
