[package]
name = "gmt-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-server = { path = "../git-server" }
ssh-server = { path = "../ssh-server" }
protobuf = "3"
serde = {version = "1.0.84", features = ["derive"]}
serde_json = "1.0.78"

[build-dependencies]
protobuf = "3"
protobuf-codegen = "3"
protoc-rust = "^2.0"
