[package]
name = "gmt-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-server = { path = "../git-server" }
ssh-server = { path = "../ssh-server" }
gmt-common = { path = "../gmt-common" }
log = "0.4.20"
russh-keys = "0.43.x"
simple_logger = "5.x"
tempfile = "3.8.1"
tokio = "1.33.0"
dotenvy = "0.15.7"
